lib/ffi/generated_bindings.dart


  @DWORD()
  external int priority;
}

class BASS_CHANNELINFO extends ffi.Struct {
  @DWORD()
  external int freq;

  @DWORD()
  external int chans;

  @DWORD()
  external int flags;

  @DWORD()
  external int ctype;

  @DWORD()
  external int origres;

  @HPLUGIN()
  external int plugin;

  @HSAMPLE()
  external int sample;

  external ffi.Pointer<ffi.Int8> filename;
}

typedef HPLUGIN = DWORD;
typedef HSAMPLE = DWORD;

class BASS_PLUGINFORM extends ffi.Struct {
  @DWORD()
  external int ctype;

  external ffi.Pointer<ffi.Int8> name;

  external ffi.Pointer<ffi.Int8> exts;
}

class BASS_PLUGININFO extends ffi.Struct {
  @DWORD()
  external int version;

  @DWORD()
  external int formatc;

  external ffi.Pointer<BASS_PLUGINFORM> formats;
}

class BASS_3DVECTOR extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

class BASS_FILEPROCS extends ffi.Struct {
  external ffi.Pointer<FILECLOSEPROC> close;

  external ffi.Pointer<FILELENPROC> length;

  external ffi.Pointer<FILEREADPROC> read;

  external ffi.Pointer<FILESEEKPROC> seek;
}

typedef FILECLOSEPROC
    = ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>;
typedef FILELENPROC = ffi.NativeFunction<QWORD Function(ffi.Pointer<ffi.Void>)>;
typedef QWORD = ffi.Uint64;
typedef FILEREADPROC = ffi.NativeFunction<
    DWORD Function(ffi.Pointer<ffi.Void>, DWORD, ffi.Pointer<ffi.Void>)>;
typedef FILESEEKPROC
    = ffi.NativeFunction<BOOL Function(QWORD, ffi.Pointer<ffi.Void>)>;

class TAG_ID3 extends ffi.Struct {
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Int8> id;

  @ffi.Array.multi([30])
  external ffi.Array<ffi.Int8> title;

  @ffi.Array.multi([30])
  external ffi.Array<ffi.Int8> artist;

  @ffi.Array.multi([30])
  external ffi.Array<ffi.Int8> album;

  @ffi.Array.multi([4])
  external ffi.Array<ffi.Int8> year;

  @ffi.Array.multi([30])
  external ffi.Array<ffi.Int8> comment;

  @BYTE()
  external int genre;
}

typedef BYTE = ffi.Uint8;

class TAG_APE_BINARY extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> key;

  external ffi.Pointer<ffi.Void> data;

  @DWORD()
  external int length;
}

class TAG_BEXT extends ffi.Opaque {}

class TAG_CART_TIMER extends ffi.Struct {
  @DWORD()
  external int dwUsage;

  @DWORD()
  external int dwValue;
}

class TAG_CART extends ffi.Opaque {}

class TAG_CUE_POINT extends ffi.Struct {
  @DWORD()
  external int dwName;

  @DWORD()
  external int dwPosition;

  @DWORD()
  external int fccChunk;

  @DWORD()
  external int dwChunkStart;

  @DWORD()
  external int dwBlockStart;

  @DWORD()
  external int dwSampleOffset;
}

class TAG_CUE extends ffi.Opaque {}

class TAG_SMPL_LOOP extends ffi.Struct {
  @DWORD()
  external int dwIdentifier;

  @DWORD()
  external int dwType;

  @DWORD()
  external int dwStart;

  @DWORD()
  external int dwEnd;

  @DWORD()
  external int dwFraction;

  @DWORD()
  external int dwPlayCount;
}

class TAG_SMPL extends ffi.Opaque {}

class TAG_CA_CODEC extends ffi.Struct {
  @DWORD()
  external int ftype;

  @DWORD()
  external int atype;

  external ffi.Pointer<ffi.Int8> name;
}

@ffi.Packed(1)
class tWAVEFORMATEX extends ffi.Struct {
  @WORD()
  external int wFormatTag;

  @WORD()
  external int nChannels;

  @DWORD()
  external int nSamplesPerSec;

  @DWORD()
  external int nAvgBytesPerSec;

  @WORD()
  external int nBlockAlign;

  @WORD()
  external int wBitsPerSample;

  @WORD()
  external int cbSize;
}

typedef WORD = ffi.Uint16;

class BASS_DX8_CHORUS extends ffi.Struct {
  @ffi.Float()
  external double fWetDryMix;

  @ffi.Float()
  external double fDepth;

  @ffi.Float()
  external double fFeedback;

  @ffi.Float()
  external double fFrequency;

  @DWORD()
  external int lWaveform;

  @ffi.Float()
  external double fDelay;

  @DWORD()
  external int lPhase;
}

class BASS_DX8_COMPRESSOR extends ffi.Struct {
  @ffi.Float()
  external double fGain;

  @ffi.Float()
  external double fAttack;

  @ffi.Float()
  external double fRelease;

  @ffi.Float()
  external double fThreshold;

  @ffi.Float()
  external double fRatio;

  @ffi.Float()
  external double fPredelay;
}

class BASS_DX8_DISTORTION extends ffi.Struct {
  @ffi.Float()
  external double fGain;

  @ffi.Float()
  external double fEdge;

  @ffi.Float()
  external double fPostEQCenterFrequency;

  @ffi.Float()
  external double fPostEQBandwidth;

  @ffi.Float()
  external double fPreLowpassCutoff;
}

class BASS_DX8_ECHO extends ffi.Struct {
  @ffi.Float()
  external double fWetDryMix;

  @ffi.Float()
  external double fFeedback;

  @ffi.Float()
  external double fLeftDelay;

  @ffi.Float()
  external double fRightDelay;

  @BOOL()
  external int lPanDelay;
}

class BASS_DX8_FLANGER extends ffi.Struct {
  @ffi.Float()
  external double fWetDryMix;

  @ffi.Float()
  external double fDepth;

  @ffi.Float()
  external double fFeedback;

  @ffi.Float()
  external double fFrequency;

  @DWORD()
  external int lWaveform;

  @ffi.Float()
  external double fDelay;

  @DWORD()
  external int lPhase;
}

class BASS_DX8_GARGLE extends ffi.Struct {
  @DWORD()
  external int dwRateHz;

  @DWORD()
  external int dwWaveShape;
}

class BASS_DX8_I3DL2REVERB extends ffi.Struct {
  @ffi.Int32()
  external int lRoom;

  @ffi.Int32()
  external int lRoomHF;

  @ffi.Float()
  external double flRoomRolloffFactor;

  @ffi.Float()
  external double flDecayTime;

  @ffi.Float()
  external double flDecayHFRatio;

  @ffi.Int32()
  external int lReflections;

  @ffi.Float()
  external double flReflectionsDelay;

  @ffi.Int32()
  external int lReverb;

  @ffi.Float()
  external double flReverbDelay;

  @ffi.Float()
  external double flDiffusion;

  @ffi.Float()
  external double flDensity;

  @ffi.Float()
  external double flHFReference;
}

class BASS_DX8_PARAMEQ extends ffi.Struct {
  @ffi.Float()
  external double fCenter;

  @ffi.Float()
  external double fBandwidth;

  @ffi.Float()
  external double fGain;
}

class BASS_DX8_REVERB extends ffi.Struct {
  @ffi.Float()
  external double fInGain;

  @ffi.Float()
  external double fReverbMix;

  @ffi.Float()
  external double fReverbTime;

  @ffi.Float()
  external double fHighFreqRTRatio;
}

class BASS_FX_VOLUME_PARAM extends ffi.Struct {
  @ffi.Float()
  external double fTarget;

  @ffi.Float()
  external double fCurrent;

  @ffi.Float()
  external double fTime;

  @DWORD()
  external int lCurve;
}

typedef HCHANNEL = DWORD;
typedef HSTREAM = DWORD;
typedef STREAMPROC = ffi.NativeFunction<
    DWORD Function(
        HSTREAM, ffi.Pointer<ffi.Void>, DWORD, ffi.Pointer<ffi.Void>)>;
typedef DOWNLOADPROC = ffi.NativeFunction<
    ffi.Void Function(ffi.Pointer<ffi.Void>, DWORD, ffi.Pointer<ffi.Void>)>;
typedef HMUSIC = DWORD;
typedef HRECORD = DWORD;
typedef RECORDPROC = ffi.NativeFunction<
    BOOL Function(
        HRECORD, ffi.Pointer<ffi.Void>, DWORD, ffi.Pointer<ffi.Void>)>;
typedef HSYNC = DWORD;
typedef SYNCPROC = ffi.NativeFunction<
    ffi.Void Function(HSYNC, DWORD, DWORD, ffi.Pointer<ffi.Void>)>;
typedef HDSP = DWORD;
typedef DSPPROC = ffi.NativeFunction<
    ffi.Void Function(
        HDSP, DWORD, ffi.Pointer<ffi.Void>, DWORD, ffi.Pointer<ffi.Void>)>;
typedef HFX = DWORD;

const int __WORDSIZE = 64;

const int __DARWIN_ONLY_64_BIT_INO_T = 0;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 0;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_64_BIT_INO_T = '\$INODE64';

const String __DARWIN_SUF_1050 = '\$1050';

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int USER_ADDR_NULL = 0;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -32768;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 32767;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 65535;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MAX = 9223372036854775807;

const int INTPTR_MIN = -9223372036854775808;

const int UINTPTR_MAX = -1;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int RSIZE_MAX = 9223372036854775807;

const int WCHAR_MAX = 2147483647;

const int WCHAR_MIN = -2147483648;

const int WINT_MIN = -2147483648;

const int WINT_MAX = 2147483647;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int TRUE = 1;

const int FALSE = 0;

const int BASSVERSION = 516;

const String BASSVERSIONTEXT = '2.4';

const int BASS_OK = 0;

const int BASS_ERROR_MEM = 1;

const int BASS_ERROR_FILEOPEN = 2;

const int BASS_ERROR_DRIVER = 3;

const int BASS_ERROR_BUFLOST = 4;

const int BASS_ERROR_HANDLE = 5;

const int BASS_ERROR_FORMAT = 6;

const int BASS_ERROR_POSITION = 7;

const int BASS_ERROR_INIT = 8;

const int BASS_ERROR_START = 9;

const int BASS_ERROR_SSL = 10;

const int BASS_ERROR_REINIT = 11;

const int BASS_ERROR_ALREADY = 14;

const int BASS_ERROR_NOTAUDIO = 17;

const int BASS_ERROR_NOCHAN = 18;

const int BASS_ERROR_ILLTYPE = 19;

const int BASS_ERROR_ILLPARAM = 20;

const int BASS_ERROR_NO3D = 21;

const int BASS_ERROR_NOEAX = 22;

const int BASS_ERROR_DEVICE = 23;

const int BASS_ERROR_NOPLAY = 24;

const int BASS_ERROR_FREQ = 25;

const int BASS_ERROR_NOTFILE = 27;

const int BASS_ERROR_NOHW = 29;

const int BASS_ERROR_EMPTY = 31;

const int BASS_ERROR_NONET = 32;

const int BASS_ERROR_CREATE = 33;

const int BASS_ERROR_NOFX = 34;

const int BASS_ERROR_NOTAVAIL = 37;

const int BASS_ERROR_DECODE = 38;

const int BASS_ERROR_DX = 39;

const int BASS_ERROR_TIMEOUT = 40;

const int BASS_ERROR_FILEFORM = 41;

const int BASS_ERROR_SPEAKER = 42;

const int BASS_ERROR_VERSION = 43;

const int BASS_ERROR_CODEC = 44;

const int BASS_ERROR_ENDED = 45;

const int BASS_ERROR_BUSY = 46;

const int BASS_ERROR_UNSTREAMABLE = 47;

const int BASS_ERROR_PROTOCOL = 48;

const int BASS_ERROR_UNKNOWN = -1;

const int BASS_CONFIG_BUFFER = 0;

const int BASS_CONFIG_UPDATEPERIOD = 1;
